<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="phonelocation.example.asuss550c.phonelocation.SubSetting"
    android:id="@+id/mainpage"
    android:background="@color/darkblue">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:divider="@color/darkblue"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="10dp"
            android:id="@+id/leaivermod"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">






            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false"
                android:layout_marginBottom="15dp"
                android:id="@+id/LPhoneInfo">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/ListFindMe"
                    android:id="@+id/textView2"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:paddingBottom="4dp"
                    android:textSize="14dp"
                    android:textAlignment="center" />

                <Button
                    android:drawableLeft="@drawable/add"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SelectList"
                    android:id="@+id/bubus"
                    android:layout_weight="1"
                    android:background="@drawable/buttonblue"
                    android:onClick="WhoFindMe" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false"
                android:layout_marginBottom="7dp"
                android:id="@+id/LPhoneInfob">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/ListIFind"
                    android:id="@+id/stoptx"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:paddingBottom="4dp"
                    android:textSize="14dp"
                    android:textAlignment="center"
                    android:visibility="gone" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SelectList"
                    android:id="@+id/bustop"
                    android:layout_weight="1"
                    android:background="@drawable/buttonblue"
                    android:onClick="WhoIFind"
                    android:visibility="gone" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FindByPassword"
                    android:id="@+id/txtpassword"
                    android:layout_weight="2"
                    android:textColor="@color/black"
                    android:paddingBottom="4dp"
                    android:textSize="14dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/EDTpassword"
                    android:layout_weight="1"
                    android:textColor="#ff1a102c"
                    android:background="@android:drawable/editbox_background"
                    android:textSize="14dp"
                    android:hint="@string/AddPassword"
                    android:paddingBottom="9dp"
                    android:paddingTop="9dp"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/AddPassDec"
                    android:id="@+id/textView3"
                    android:textColor="#fffffffb" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Done"
                        android:id="@+id/bustopNext"
                        android:layout_weight="1"
                        android:background="@drawable/buttonblue"
                        android:onClick="buNext"
                        android:visibility="visible" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
